fixing cut off issue

--- a/frontend/src/assets/scss/pages/_chat.scss
+++ b/frontend/src/assets/scss/pages/_chat.scss
@@ -1,7 +1,6 @@
 .chat {
   // height: 100vh;
-  height: 100%;
-  min-height: 100vh;
+  height: var(--app-height);
   .row {
     height: 100%;
   }
@@ -9,7 +8,6 @@
 
 @media (max-width: 768px) {
   .chat {
-    // min-height: 100%;
     .row {
       .activeWindow {
         display: flex !important;
